// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCard should hide the settings icon 1`] = `
<div>
  <div
    class="sc-AxjAm hsiRAq"
  >
    <div
      class="relative px-6 sm:flex sm:items-center py-4"
    >
      <div
        class="flex flex-row justify-between w-full"
      >
        <div
          class="flex items-center"
        >
          <div
            class="block w-12 h-12 mx-auto rounded-full sm:mx-0 sm:flex-shrink-0"
          >
            <img
              alt="User Avatar"
              class="rounded-full"
              data-testid="profile-card__user--avatar"
              src="https://www.w3schools.com/howto/img_avatar.png"
            />
          </div>
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Name
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--name"
            >
              Oleg Gelo
            </p>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Total Balance
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--balance"
            >
              234,500.46 USD
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileCard should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm hsiRAq"
  >
    <div
      class="relative px-6 sm:flex sm:items-center py-4"
    >
      <div
        class="absolute top-0 -mt-2 -mr-4 right-0 flex items-center justify-center w-6 h-6 p-1 mt-3"
      >
        <div
          class="relative"
        >
          <button
            class="outline-none focus:outline-none float-right"
            data-testid="dropdown__toggle"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            />
          </button>
        </div>
      </div>
      <div
        class="flex flex-row justify-between w-full"
      >
        <div
          class="flex items-center"
        >
          <div
            class="block w-12 h-12 mx-auto rounded-full sm:mx-0 sm:flex-shrink-0"
          >
            <img
              alt="User Avatar"
              class="rounded-full"
              data-testid="profile-card__user--avatar"
              src="https://www.w3schools.com/howto/img_avatar.png"
            />
          </div>
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Name
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--name"
            >
              Oleg Gelo
            </p>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Total Balance
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--balance"
            >
              234,500.46 USD
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileCard should render the settings icon 1`] = `
<div>
  <div
    class="sc-AxjAm hsiRAq"
  >
    <div
      class="relative px-6 sm:flex sm:items-center py-4"
    >
      <div
        class="absolute top-0 -mt-2 -mr-4 right-0 flex items-center justify-center w-6 h-6 p-1 mt-3"
      >
        <div
          class="relative"
        >
          <button
            class="outline-none focus:outline-none float-right"
            data-testid="dropdown__toggle"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            />
          </button>
        </div>
      </div>
      <div
        class="flex flex-row justify-between w-full"
      >
        <div
          class="flex items-center"
        >
          <div
            class="block w-12 h-12 mx-auto rounded-full sm:mx-0 sm:flex-shrink-0"
          >
            <img
              alt="User Avatar"
              class="rounded-full"
              data-testid="profile-card__user--avatar"
              src="https://www.w3schools.com/howto/img_avatar.png"
            />
          </div>
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Name
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--name"
            >
              Oleg Gelo
            </p>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Total Balance
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--balance"
            >
              234,500.46 USD
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
